# crawlcraft

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  docker.env.example  docker.sh  fetch_all_ipo.py  pyproject.toml
src/crawlcraft/: __init__.py  daemon.py  settings.py
src/crawlcraft/cli/: main.py
src/crawlcraft/core/: __init__.py  plugins.py  runs.py  scheduler.py  scraper.py  task.py
src/crawlcraft/pipeline/: __init__.py  redpanda.py
src/crawlcraft/store/: __init__.py  db.py
src/scrapers/hk-ipo/: __init__.py
src/scrapers/hk_ipo/: __init__.py  api.md
src/scrapers/weibo-hotsearch/: __init__.py
